--- a/puzzle/style.css
+++ b/puzzle/style.css
@@ -3,7 +3,6 @@
     font-family: 'Poppins', sans-serif;
 }
 html {
-    position: fixed;
     width:100vw;
 }
 body {
@@ -52,7 +51,7 @@ table tr:last-child td:last-child {
 #ol {
     position: absolute;
     height:100vh;
-    width:100vh;
+    width:100vw;
     background-color: rgb(0,0,255,0.15);
     color: white;
     backdrop-filter: blur(9px);
@@ -74,6 +73,7 @@ table tr:last-child td:last-child {
     margin-top:0px;
     color: white;
     height:56px;
+    margin-bottom: 100px;
 }
 
 #moves {
