--- a/puzzle/style.css
+++ b/puzzle/style.css
@@ -62,6 +62,7 @@ table tr:last-child td:last-child {
     text-align: center;
     position: absolute;
     width:100vw;
+    top: 30vh;
 }
 
 #title {
