--- a/puzzle/style.css
+++ b/puzzle/style.css
@@ -56,6 +56,7 @@ table tr:last-child td:last-child {
     backdrop-filter: blur(9px);
     z-index:2;
     margin-top:0px;
+    height: 100%;
 }
 #iol {
     text-align: center;
