--- a/clock/style.css
+++ b/clock/style.css
@@ -14,9 +14,9 @@ body {
 .clock {
     background-color: rgba(255, 255, 255, .5);
     height: 250px;
-    width: 250px;
+    width: 80vw;
     border-radius: 50%;
-    font-size: 20px;
+    font-size: 1.25em;
     position: relative;
     border: 12px solid transparent ;
 }
@@ -40,7 +40,7 @@ body {
     height: 100%;
     width: 100%;
     text-align: center;
-    font-size: 20px;
+    font-size: 1em;
     z-index: 12;
 }
 
@@ -56,21 +56,21 @@ body {
 
 .clock .second {
     width: 3px;
-    height: 90px;
+    height: 40%;
     background-color: rgba(255,0,0,0.5);
     border: .5px solid black;
 }
 
 .clock .minute {
     width: 4px;
-    height: 80px;
+    height: 37%;
     background-color: rgba(0,0,255,0.5);
     border: .5px solid black;
 }
 
 .clock .hour {
     width: 5px;
-    height: 60px;
+    height: 27%;
     background-color: rgba(0,0,0,0.5);
     border: .5px solid black;
 }
@@ -91,7 +91,7 @@ body {
     height: 100%;
     width: 100%;
     text-align: center;
-    font-size: 30px;
+    font-size: 1.5em;
     z-index: 12;
     font-weight: 500;
 }
