--- a/clock/style.css
+++ b/clock/style.css
@@ -13,10 +13,10 @@ body {
 }
 .clock {
     background-color: rgba(255, 255, 255, .5);
-    height: 250px;
     width: 80vw;
+    max-width: 400px;
     border-radius: 50%;
-    font-size: 1.25em;
+    font-size: 130%;
     position: relative;
     border: 12px solid transparent ;
 }
