--- a/newspapers/style.css
+++ b/newspapers/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Urdu';
-    src: url('urdufont.ttf');
+    src: url('src/urdufont.ttf');
     format('truetype');
 } 
 
