--- a/newspapers/style.css
+++ b/newspapers/style.css
@@ -1,5 +1,4 @@
-    	
-    @font-face {
+@font-face {
     font-family: 'Urdu';
     src: url('https://shahfahad19.github.io/newspapers/src/urdufont.ttf');
     format('truetype');
@@ -39,6 +38,7 @@ button, #logo, #loadingbox{
 }
 .box {
     width: 100vw;
+    height: 100%;
     text-align: center;
     overflow-y: scroll;
     display: grid;
