--- a/newspapers/style.css
+++ b/newspapers/style.css
@@ -8,6 +8,8 @@
 * {
      user-select:none;
      font-family: 'Patrick Hand SC', sans-serif;
+     outline: 0;
+  
 }
 
 body {
@@ -36,9 +38,11 @@ button, #logo, #loadingbox{
     flex-basis: 100%;
     overflow-y: scroll ;
     width : 100%;
+    display: block;
 }
 .box {
     width: 100vw;
+    height: 100%;
     text-align: center;
     overflow-y: scroll;
     display: grid;
