--- a/newspapers/style.css
+++ b/newspapers/style.css
@@ -46,8 +46,8 @@ button, #logo, #loadingbox{
     display: grid;
     grid-template-columns: repeat(2, 150px);
     grid-template-rows: repeat(7, 80px);
-    grid-column-gap: 3px;
-    grid-row-gap: 3px;
+    grid-column-gap: 2px;
+    grid-row-gap: 2px;
     justify-content: center;
 }
 
@@ -134,6 +134,7 @@ iframe {
     position: absolute;
     top: 50%;
     left: 50%;
+    flex-basis: 100%;
     transform: translate(-50%,-50%);
 }
 
