--- a/newspapers/style.css
+++ b/newspapers/style.css
@@ -129,18 +129,14 @@ iframe {
 }
 
 #loadingbox {
-    transform: translate(-50%,-50%);
-    font-size: 22px;
+    flex-basis: 100%;
+}
+
+#loading {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-}
-
-#loading {
-    display: inline-block;
-    width: 80px;
-    height: 80px;
 }
 
 #loading:after {
