--- a/newspapers/style.css
+++ b/newspapers/style.css
@@ -128,33 +128,9 @@ iframe {
     padding: 8px;
 }
 
-#loadingbox {
+#msgbox {
     flex-basis: 100%;
-}
-
-#loading {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-}
-
-#loading:after {
-    content: " ";
-    display: block;
-    width: 64px;
-    height: 64px;
-    margin: 8px;
-    border-radius: 50%;
-    border: 6px solid #fff;
-    border-color: RoyalBlue transparent Royalblue transparent;
-    animation: loading 1.2s linear infinite;
-}
-@keyframes loading {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
+    display: flex;
+    align-items: center;
+    justify-content: center ;
 }
