--- a/newspapers/style.css
+++ b/newspapers/style.css
@@ -129,7 +129,7 @@ iframe {
 }
 
 #msgbox {
-    flex-basis: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center ;
