--- a/newspapers/style.css
+++ b/newspapers/style.css
@@ -129,12 +129,9 @@ iframe {
 }
 
 #msgbox {
-    height: 100%;
-}
-
-#msg {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
+    font-family: 'Urdu', sans-serif;
+    height:100%;
+    display: flex;
+    align-items: center;
+    justify-content: center ;
 }
