--- a/newspapers/style.css
+++ b/newspapers/style.css
@@ -31,7 +31,7 @@ button {
     padding: 10px;
     color: white;
 }
-button, #logo, #loadingbox{
+button, #logo, #msg{
     font-family: "Urdu";
 }
 #box {
@@ -133,8 +133,4 @@ iframe {
     display: flex;
     align-items: center;
     justify-content: center ;
-}
-
-#msg {
-  font-family: 'Urdu', sans-serif;
 }
