--- a/newspapers/style.css
+++ b/newspapers/style.css
@@ -32,7 +32,7 @@ button {
     color: white;
 }
 button, #logo, #msg{
-    font-family: "Urdu";
+    font-family: 'Noto Nastaliq Urdu Draft';
 }
 #box {
     flex-basis: 100%;
