--- a/weather/style.css
+++ b/weather/style.css
@@ -1,8 +1,9 @@
 * {
     font-family: 'Zilla Slab', sans-serif;
+    outline: 0;
 }
 body {
-    background: linear-gradient(90deg, rgba(245,116,54,1) 24%, rgba(238,168,38,1) 94%);
+    background: linear-gradient(90deg, #2F80ED, #56CCF2);
     margin: 0px;
 }
 
@@ -10,37 +11,43 @@ input, button {
     font-weight: bold;
     font-size: 16px;
     color: white;
+    border: 2px solid #373737;
+    border-radius: 4px;
 }
 
 #topbar, #searchbox, #more, #forecastlabel, #forecast #date, #footer {
-    background-color: #373737;
+    background-color: rgba(55,55,55,0.9);
     color: white;
 }
 .material-icons.md-48 {
     font-size: 32px;
 }
 #topbar {
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bold;
     color: white;
     padding: 8px;
 }
 
+
 #searchbox {
     padding: 10px;
     display: none;
 }
-
+#searchbox .inner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 #searchbox input {
-    height: 30px;
+    height: 32.5px;
     color: #373737;
     width: 200px;
 }
 
 #searchbox button {
-    height: 36px;
-    background-color: #f05e23;
-    border: 2px solid #f05e23;
+    height: 39px;
+    background-color: #2F80ED;
     width: 80px;
 }
 
@@ -58,23 +65,26 @@ input, button {
 }
 
 #forecast {
-    width: 85%;
-    height: 350px;
-    border: 1.5px solid white;
+    width: 80%;
+    border: 2px solid white;
     color: white;
     animation: forecast 1s 1;
     border-radius: 10px;
+    padding: 5px;
+    background-color: rgba(255,255,255,0.2);
 }
 
 #city {
-    font-size: 40px;
+    font-size: 35px;
+    
+}
+
+#label {
     text-align: left;
-    padding-top: 7px;
-    padding-left: 10px;
 }
 
 #mainbody img {
-    float: right;
+    
 }
 
 #temp {
@@ -86,54 +96,43 @@ input, button {
 #cond {
     float: left;
     font-size: 18px;
-    padding-left: 5px;
+    padding-left: 8px;
 }
 
 #more {
-    width: 83%;
-    padding: 5px;
-    margin: 5px;
-    height: 25px;
+    width: 90%;
     border-radius: 8px;
-    font-size: 17px;
+    font-size: 15px;
+    display: flex;
+    justify-content: space-between;
+    margin: 5px;
+    padding: 8px;
 }
 
-#more #label {
-    float: left;
-    padding-left: 5px;
-}
-
-#wind {
-    text-align: right;
-}
 
 #forecast img {
     height: 45px;
     width: 45px;
-    float: left;
+    
 }
 
 #forecast #date {
     color: white;
-    font-size: 24px;
+    font-size: 20px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
     padding: 5px;
-    border-radius: 6px;
-    padding-top: 0px;
 }
 
 #forecast #avgtemp {
-    float: right;
     padding-top: 3px;
     font-size: 23px;
 }
 
 #forecast #summary {
     font-size: 20px;
-    padding-bottom: 10px;
-}
-
-#wind, #direction, #humidity, #feel, #avghumidity, #rainchance, #sunrise, #sunset, #moonrise, #moonset, #chanceofrain {
-    float: right;
+    padding-bottom: 5px;
 }
 
 #forecastlabel {
@@ -144,6 +143,9 @@ input, button {
 #forecast #top {
     height: 45px;
     padding: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 #footer {
@@ -159,13 +161,22 @@ input, button {
 }
 
 #loadingbox {
-    margin-top: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
 
 #loading {
   display: inline-block;
   width: 80px;
   height: 80px;
+}
+
+#cityname, #tempc{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 #loading:after {
